Add Beeper Desktop chat and message Raycast commands
Introduces new Raycast commands for Beeper Desktop integration: create chat, list all chats, list messages in a chat, search messages, and send a message. Updates dependency on @beeper/desktop-api to use a local file reference. Enhances useBeeperDesktop hook to accept dependencies for improved reactivity.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     }
   ],
   "dependencies": {
-    "@beeper/desktop-api": "^0.1.4",
+    "@beeper/desktop-api": "file:../../../Primary/Projects/texts/desktop-api-js",
     "@raycast/api": "^1.102.6",
     "@raycast/utils": "^1.17.0"
   },
